--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,8 @@ body {
 	line-height: 22px;
 
 	background-color: #FFFFFF;
+
+	overflow-x: hidden;
 }
 
 .text-link {
@@ -73,10 +75,11 @@ a:hover { text-decoration: none; }
  */
 
 .flash {
-	position: fixed;
+	/* position: fixed; */
+	position: relative;
 
 	width: 100%;
-	height: 100vh;
+	/*height: 100vh;*/
 
 	overflow: hidden;
 
@@ -86,8 +89,8 @@ a:hover { text-decoration: none; }
 }
 
 .flash-ghost {
-	position: relative;
-	height: 80vh;
+	/*position: relative;
+	height: 35vh;*/
 }
 
 	.flash--limited { height: 80vh; }
@@ -96,16 +99,17 @@ a:hover { text-decoration: none; }
 .flash-item {
 	position: relative;
 	width: 100%;
-	height: 100%;
+	/*height: 100%;*/
 
-	display: flex;
-	align-items: top;
+	display: block;
+	/*display: flex;*/
+	/*align-items: top;*/
 }
 
 	.flash-item__background {
-		position: absolute;
+		/*position: absolute;
 		top: 0;
-		left: 0;
+		left: 0;*/
 
 		width: 100%;
 		height: auto;
@@ -129,6 +133,7 @@ a:hover { text-decoration: none; }
 .flash-item__content {
 	z-index: 100;
 	margin-top: 150px;
+	display: none;
 }
 
 	.flash-item__content--slide1 {
@@ -317,4 +322,10 @@ a:hover { text-decoration: none; }
 .social-link {
 	font-size: 25px;
 	margin-right: 10px;
+}
+
+.page-section .btn, .page-section .btn-secondary {
+	display: block;
+	text-align: center;
+	margin: 0;
 }
