optimisation responsive / images

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -9,6 +9,9 @@
 		height: 80vh;
 	}
 
+    .flash--limited { height: 80vh; }
+	.flash-ghost--limited { height: 50vh; }
+
 	.flash-item__content {
 		display: block;
 	}
