--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -48,7 +48,7 @@
 				<!-- /.col-sm-4 -->
 			</div>
 
-			<h2 class="section-title section-title--small">En groupe, pour plus d'énergie</h2>
+			<h2 class="section-title section-title--small" style="margin-top: 20px;">En groupe, pour plus d'énergie</h2>
 
 			<p>
 				Vous cherchez un <strong>groupe de musique</strong> pour votre soirée ou événement, plutôt qu'un musicien seul ? Jérémy propose également de nombreuses formules, où lui et son accordéon sont rejoints par d'autres instrumentistes ; les formations sont variées, en fonction de vos envies et de votre budget. En voici quelque exemples, n'hésitez pas à <a href="{{ path('contact') }}">envoyer un message</a> pour plus d'informations.
