--- a/templates/bands/marie.html.twig
+++ b/templates/bands/marie.html.twig
@@ -18,7 +18,7 @@
 			<h1 class="section-title">Marie Pétrolette</h1>
 
 			<p>
-				<a href="https://www.facebook.com/Marie-P%C3%A9trolette-473387396102982/" class="text-link social-link" target="_blank"><i class="fa fa-facebook"></i></a>
+				<a href="https://www.facebook.com/Marie-P%C3%A9trolette-473387396102982/" class="text-link social-link" target="_blank"><i class="fab fa-facebook"></i></a>
 				<a href="https://marie-petrolette.jimdo.com/" class="text-link social-link" target="_blank"><i class="fa fa-globe"></i></a>
 			</p>
 
