--- a/templates/bands/mime.html.twig
+++ b/templates/bands/mime.html.twig
@@ -18,8 +18,8 @@
 			<h1 class="section-title">MimE</h1>
 
 			<p>
-				<a href="https://www.facebook.com/REMI.MIME" class="text-link social-link" target="_blank"><i class="fa fa-facebook"></i></a>
-				<a href="https://www.youtube.com/channel/UCWBiotlqnlEppd7P-eYrW_Q" class="text-link social-link" target="_blank"><i class="fa fa-youtube"></i></a>
+				<a href="https://www.facebook.com/REMI.MIME" class="text-link social-link" target="_blank"><i class="fab fa-facebook"></i></a>
+				<a href="https://www.youtube.com/channel/UCWBiotlqnlEppd7P-eYrW_Q" class="text-link social-link" target="_blank"><i class="fab fa-youtube"></i></a>
 			</p>
 
 			<p>
