--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,6 +32,10 @@
             <meta name="description" content="Jérémy Dutheil est accordéoniste à Paris ; musicien professionnel et expérimenté, il intervient seul ou en groupe lors de concerts, événements, animations ou soirées privées.">
         {% endblock %}
 
+        <meta property="og:title" content="Accordéoniste profesionnel, Paris | Jérémy DUTHEIL">
+        <meta property="og:description" content="Jérémy Dutheil est accordéoniste professionnel à Paris, Ile de France">
+        <meta property="og:image" content="http://www.jeremy-dutheil.fr/img/videos-pic.jpg">
+
         <link href="https://fonts.googleapis.com/css?family=Hind" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
@@ -129,10 +133,16 @@
                     <span itemprop="name">Jérémy DUTHEIL</span> - <a href="mailto:dutheil.jeremy@gmail.com" style="color: #ffffff" itemprop="email">dutheil.jeremy@gmail.com</a> - <span itemprop="telephone">06.85.38.22.16</span><br>
                 </p>
 
+                <p class="contact-txt" style="margin-top: 10px;">
+                    <a title="Retrouvez moi sur Facebook" style="font-size: 24px; color: #FFFFFF; margin-right: 10px;" href="https://www.facebook.com/jeremydutheilaccordeoniste/" target="_blank" ><i class="fab fa-facebook"></i></a>
+                    <a title="Retrouvez moi sur Youtube" style="font-size: 24px; color: #FFFFFF; margin-right: 10px;" href="https://www.youtube.com/channel/UCTHC327qYeB34ri8Fgzubjw" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a title="Retrouvez moi sur Soundcloud" style="font-size: 24px; color: #FFFFFF;" href="https://soundcloud.com/j-r-my-dutheil/" target="_blank"><i class="fab fa-soundcloud"></i></a>
+                </p>
+
                 <hr style="background-color: #ffffff;">
 
                 <p class="text-center" style="font-size: 14px; ">
-                    Jérémy fait confiance à <a href="http://www.monsieuraccordeon.com" style="color: #ffffff;" target="_blank">Monsieur Accordéon</a> pour l'entretien de ses accordéons.
+                    Jérémy fait confiance à <a href="http://www.monsieuraccordeon.com" style="color: #ffffff;" target="_blank" title="Réparation / Accordage accordéons en Ile de France">Monsieur Accordéon</a> pour l'entretien de ses accordéons.
                 </p>
             </div>
         </section>
