--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -40,6 +40,59 @@
 					<p>
 						Fort de nombreuses années d'expérience, Jérémy propose des prestations pouvant durer jusque <em>plusieurs heures</em> ; n'hésitez pas à lui demander des morceaux particuliers en amont, qu'il se fera un plaisir de préparer pour le jour J !
 					</p>
+
+					<p>
+						Exemples de morceaux présents dans le répertoire :
+						<ul>
+							<li>
+								Les feuilles mortes
+							</li>
+
+							<li>
+								La Foule
+							</li>
+
+							<li>
+								All of Me
+							</li>
+
+							<li>
+								Minor Swing
+							</li>
+
+							<li>
+								Sous le ciel de Paris
+							</li>
+
+							<li>
+								Aux Champs Elysées
+							</li>
+
+							<li>
+								Mon amant de Saint Jean
+							</li>
+
+							<li>
+								Sunny side of the Street
+							</li>
+
+							<li>
+								Emmenez moi
+							</li>
+
+							<li>
+								Ménilmontant
+							</li>
+
+							<li>
+								Les copains d'abord
+							</li>
+							
+							<li>
+								<i>Et bien d'autres...</i>
+							</li>
+						</ul>
+					</p>
 				</div>
 
 				<div class="col-md-4">
