--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,7 +29,7 @@
         </title>
 
         {% block metadesc %}
-            <meta name="description" content="Jérémy Dutheil est accordéoniste à Paris ; musicien professionnel et expérimenté, il intervient seul ou en groupe lors de concerts, événements, animations ou soirées privées.">
+            <meta name="description" content="Jérémy Dutheil est accordéoniste professionnel à Paris ; disponible seul ou en groupe pour concerts, événements, animations ou soirées privées.">
         {% endblock %}
 
         <meta property="og:title" content="Accordéoniste profesionnel, Paris | Jérémy DUTHEIL">
@@ -58,6 +58,8 @@
 
           gtag('config', 'UA-57123259-1');
         </script>
+
+        {% block canonical %}{% endblock %}
     </head>
 
     <body>
