--- a/templates/geo/fontainebleau.html.twig
+++ b/templates/geo/fontainebleau.html.twig
@@ -5,17 +5,17 @@
 {% endblock %}
 
 {% block title %}
-    Accordéoniste profesionnel | Melun (77) | Jérémy DUTHEIL
+    Accordéoniste profesionnel | Fontainebleau (77) | Jérémy DUTHEIL
 {% endblock %}
 
 {% block metadesc %}
-    <meta name="description" content="Accordéoniste professionnel à Melun (77) disponible seul ou en groupe pour concerts, événements, animations ou soirées privées.">
+    <meta name="description" content="Accordéoniste professionnel à Fontainebleau (77) disponible seul ou en groupe pour concerts, événements, animations ou soirées privées.">
 {% endblock %}
 
 {% block body %}
     <section class="flash flash--limited">
         <div class="flash-item">
-            <img src="img/flash-item-1.jpg" alt="Accordéoniste en concert" title="Accordéoniste professionnel à Melun" class="flash-item__background">
+            <img src="img/flash-item-1.jpg" alt="Accordéoniste en concert" title="Accordéoniste professionnel à Fontainebleau" class="flash-item__background">
         </div>
         <!-- /.flash-item -->
     </section>
@@ -30,7 +30,7 @@
 			<div class="row">
 				<div class="col-sm-12">
                     <p>
-                        Vous cherchez un accordéoniste à Melun, en Seine-et-Marne (77) ?
+                        Vous cherchez un accordéoniste à Fontainebleau, en Seine-et-Marne (77) ?
                     </p>
                 </div>
             </div>
