--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,8 +4,6 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-
-
         <link rel="apple-touch-icon" sizes="57x57" href="{{ asset('img/favicon/apple-icon-57x57.png') }}">
         <link rel="apple-touch-icon" sizes="60x60" href="{{ asset('img/favicon/apple-icon-60x60.png') }}">
         <link rel="apple-touch-icon" sizes="72x72" href="{{ asset('img/favicon/apple-icon-72x72.png') }}">
@@ -59,6 +57,18 @@
           gtag('config', 'UA-57123259-1');
         </script>
 
+        <script type="application/ld+json">
+            {
+             "@context" : "http://schema.org",
+             "@type" : "Organization",
+             "name" : "Jérémy Dutheil",
+             "url" : "http://www.jeremy-dutheil.fr",
+             "sameAs" : [
+               "https://www.facebook.com/jeremydutheilaccordeoniste/",
+              ],
+            }
+            </script>
+
         {% block canonical %}{% endblock %}
     </head>
 
@@ -108,15 +118,15 @@
                         </li>
 
                         <li class="nav-item ">
-                            <a style="font-size: 24px;" class="nav-link" href="https://www.facebook.com/jeremydutheilaccordeoniste/" target="_blank"><i class="fab fa-facebook"></i></a>
+                            <a title="Retrouvez moi sur Facebook" rel="nofollow" style="font-size: 24px;" class="nav-link" href="https://www.facebook.com/jeremydutheilaccordeoniste/" target="_blank"><i class="fab fa-facebook"></i></a>
                         </li>
 
                         <li class="nav-item">
-                            <a style="font-size: 24px;" class="nav-link" href="https://www.youtube.com/channel/UCTHC327qYeB34ri8Fgzubjw" target="_blank"><i class="fab fa-youtube"></i></a>
+                            <a title="Retrouvez moi sur Youtube" rel="nofollow" style="font-size: 24px;" class="nav-link" href="https://www.youtube.com/channel/UCTHC327qYeB34ri8Fgzubjw" target="_blank"><i class="fab fa-youtube"></i></a>
                         </li>
 
                         <li class="nav-item">
-                            <a style="font-size: 24px;" class="nav-link" href="https://soundcloud.com/j-r-my-dutheil/" target="_blank"><i class="fab fa-soundcloud"></i></a>
+                            <a title="Retrouvez moi sur Soundcloud" rel="nofollow" style="font-size: 24px;" class="nav-link" href="https://soundcloud.com/j-r-my-dutheil/" target="_blank"><i class="fab fa-soundcloud"></i></a>
                         </li>
                     </ul>
                 </div>
