--- a/templates/bands/elena.html.twig
+++ b/templates/bands/elena.html.twig
@@ -27,7 +27,7 @@
 				</div>
 			</div>
 
-			<a href="{{ path('duos') }}" class="btn btn-primary" style="margin-top: 35px;">Retour</a>
+			<a href="{{ path('collaborations') }}" class="btn btn-primary" style="margin-top: 35px;">Retour</a>
 		</div>
 		<!-- /.container -->
 	</section>
