--- a/templates/pages/collaborations.html.twig
+++ b/templates/pages/collaborations.html.twig
@@ -29,34 +29,121 @@
 				Toujours intéressé par d'autres découvertes, je suis <strong>disponible</strong> et <strong>ouvert</strong> à de nouvelles propositions ; que vous soyez une <strong>troupe de théâtre</strong> cherchant un accompagnateur, un <strong>groupe</strong> cherchant son nouvel accordéoniste ou encore tout artiste avec un projet musical, n'hésitez pas à <a href="#" class="text-link">me contacter</a> pour en discuter.
 			</p>
 
-			<div class="row">
-				<div class="col-sm-6">
-					<div class="collab__link">
-						<h2 class="section-title section-title--small">Chanteurs / Chanteuses</h2>
+			<div class="row row--mtop">
+				<div class="col-sm-4 collab-col">
+					<h2 class="section-title section-title--small">MimE</h2>
 
-						<p>
-							Peut-être bien ma formule préférée en tant que <strong>musicien accompagnateur</strong>, je vous présente ici des duos accordéon / voix ; chacun des artistes que j'accompagne propose son propre style, et évolue dans un univers marqué et distinct.
-						</p>
-
-						<a href="{{ path('duos') }}" class="btn btn-primary">Découvrir les duos</a>
+					<div class="collab-pic-container">
+						<img class="img-fluid duos-pic" src="img/duos_mime.jpg" alt="">
 					</div>
-					<!-- /.collab__link -->
+
+					<p class="collab-txt">
+						Chansons débraillées !
+					</p>
+
+					<p>
+						<a href="{{ path('mime') }}" class="btn btn-primary">En savoir plus</a>
+					</p>
 				</div>
 
-				<div class="col-sm-6">
-					<div class="collab__link">
-						<h2 class="section-title section-title--small">Groupes</h2>
+				<div class="col-sm-4 collab-col">
+					<h2 class="section-title section-title--small">Marie Pétrolette</h2>
 
-						<p>
-							L'accordéon est rejoint par une <strong>section rythmique</strong>, et parfois d'autres instruments mélodiques ; du <em class="text-link">rock</em> au <em class="text-link">swing</em> en passant par le <em class="text-link">jazz</em> ou le <em class="text-link">reggae</em>, venez découvrir les groupes avec lesquels j'ai plaisir à jouer !
-						</p>
-
-						<a href="{{ path('groupes') }}" class="btn btn-primary">Découvrir les groupes</a>
+					<div class="collab-pic-container">
+						<img class="img-fluid duos-pic" src="img/duos_marie.jpg" alt="">
 					</div>
-					<!-- /.collab__link -->
+
+					<p class="collab-txt">
+						Chansons coquines et réalistes
+					</p>
+
+					<p>
+						<a href="{{ path('marie') }}" class="btn btn-primary">En savoir plus</a>
+					</p>
+				</div>
+
+				<div class="col-sm-4 collab-col">
+					<h2 class="section-title section-title--small">Rue la Môme</h2>
+
+					<div class="collab-pic-container">
+						<img class="img-fluid duos-pic" src="img/ruelamome.jpg" alt="">
+					</div>
+
+					<p class="collab-txt">
+						Spectacle hommage à Edith Piaf
+					</p>
+
+					<p>
+						<a href="{{ path('ruelamome') }}" class="btn btn-primary">En savoir plus</a>
+					</p>
+				</div>
+
+				<div class="col-sm-4 collab-col">
+					<h2 class="section-title section-title--small">Madjid et Yano Tët</h2>
+
+					<div class="collab-pic-container">
+						<img class="img-fluid duos-pic" src="img/madjid.jpg" alt="">
+					</div>
+
+					<p class="collab-txt">
+						Rock oriental
+					</p>
+
+					<p>
+						<a href="{{ path('madjid') }}" class="btn btn-primary">En savoir plus</a>
+					</p>
+				</div>
+
+				<div class="col-sm-4 collab-col">
+					<h2 class="section-title section-title--small">La Marquise</h2>
+
+					<div class="collab-pic-container">
+						<img class="img-fluid duos-pic" src="img/groupes_marquise.jpg" alt="">
+					</div>
+
+					<p class="collab-txt">
+						Trio chanson / swing
+					</p>
+
+					<p>
+						<a href="{{ path('marquise' )}}" class="btn btn-primary">En savoir plus</a>
+					</p>
+				</div>
+
+				<div class="col-sm-4 collab-col">
+					<h2 class="section-title section-title--small">Elena Josse</h2>
+
+					<div class="collab-pic-container">
+						<img class="img-fluid duos-pic" src="img/duos_elena.jpg" alt="">
+					</div>
+
+					<p class="collab-txt">
+						Grands standards de la chanson française
+					</p>
+
+					<p>
+						<a href="{{ path('elena') }}" class="btn btn-primary">En savoir plus</a>
+					</p>
+				</div>
+
+				<div class="col-sm-4 collab-col">
+					<h2 class="section-title section-title--small">Les Fils de Flûte</h2>
+
+					<div class="collab-pic-container">
+						<img class="img-fluid duos-pic" src="img/groupes_fdf.jpg" alt="">
+					</div>
+
+					<p class="collab-txt">
+						Chanson française festive
+					</p>
+
+					<p>
+						<a href="{{ path('fdf') }}" class="btn btn-primary">En savoir plus</a>
+					</p>
 				</div>
 			</div>
-			<!-- /.row -->
+
+
 		</div>
 		<!-- /.container -->
 	</section>
