--- a/templates/pages/groupes.html.twig
+++ b/templates/pages/groupes.html.twig
@@ -26,7 +26,9 @@
 				<div class="col-sm-4">
 					<h2 class="section-title section-title--small">MimE</h2>
 
-					<img class="img-fluid duos-pic" src="img/duos_mime.jpg" alt="">
+					<div class="collab-pic-container">
+						<img class="img-fluid duos-pic" src="img/duos_mime.jpg" alt="">
+					</div>
 
 					<p>
 						Chansons débraillées !
