--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -101,6 +101,28 @@
 				<!-- /.col-sm-4 -->
 			</div>
 
+			<div class="row">
+				<div class="col-md-6">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/8eY4FsHf7g0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+					<p class="text-center" style="margin-top: 15px;">
+						<a href="https://www.youtube.com/watch?v=mv3DgoYPCds" target="_blank">https://www.youtube.com/watch?v=mv3DgoYPCds</a>
+					</p>
+				</div>
+
+				<div class="col-md-6">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/VVWMhc7LNcM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+					<p class="text-center" style="margin-top: 15px;">
+						<a href="https://www.youtube.com/watch?v=VVWMhc7LNcM" target="_blank">https://www.youtube.com/watch?v=VVWMhc7LNcM</a>
+					</p>
+				</div>
+			</div>
+
+			<p>
+				<a class="btn btn-primary" href="{{ path('videos') }}">Voir d'autres vidéos</a>
+			</p>
+
 			<h2 class="section-title section-title--small" style="margin-top: 20px;">En groupe, pour plus d'énergie</h2>
 
 			<p>
@@ -124,6 +146,16 @@
 					Et bien d'autres...
 				</li>
 			</ul>
+
+			<div class="row">
+				<div class="col-md-12">
+					<iframe class="video-center" width="800" height="500" src="https://www.youtube.com/embed/W_uOwoGcBuE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+					<p class="text-center" style="margin-top: 15px;">
+						<a href="https://www.youtube.com/watch?v=W_uOwoGcBuE" target="_blank">https://www.youtube.com/watch?v=W_uOwoGcBuE</a>
+					</p>
+				</div>
+			</div>
 
 			<hr style="background-color: #2d2d2d; margin: 25px 0;">
 
