--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -80,7 +80,7 @@
  						</p>
 
 						<p>
-							<a href="{{ path('duos') }}" class="btn-secondary">Voir les artistes accompagnés (duos)</a>
+							<a href="{{ path('collaborations') }}" class="btn-secondary">Voir les artistes accompagnés</a>
 						</p>
 					</div>
 				</div>
@@ -111,7 +111,7 @@
 					</p>
 
 					<p>
-						<a href="{{ path('groupes') }}" class="btn-secondary">Voir les groupes</a>
+						<a href="{{ path('collaborations') }}" class="btn-secondary">Voir les groupes</a>
 					</p>
 				</div>
 
