--- a/templates/pages/videos.html.twig
+++ b/templates/pages/videos.html.twig
@@ -21,31 +21,102 @@
 		<div class="container">
 			<h1 class="section-title">Vidéos</h1>
 
+			<p>
+				Découvrez mon répertoire en solo, ou au sein de mes différents projets, avec quelque vidéos ci-dessous ; l'ensemble de mes vidéos en ligne est disponible sur <a href="https://www.youtube.com/channel/UCTHC327qYeB34ri8Fgzubjw">ma page Youtube</a>.
+			</p>
+
+			<h2 class="section-title section-title--small">Duo accordéon / guitare</h2>
+
+			<p>
+				En duo avec l'excellent guitariste Solal Poux, nous proposons des concerts et animations musicales autour du jazz (plus particulièrement jazz manouche) ; la formule duo est facile à mettre en place, et convient très bien aux budgets les plus modestes.
+			</p>
+
+			<p>
+				<a href="{{ path('manouche') }}" class="btn btn-primary">Plus d'informations sur le duo accordéon / guitare</a>
+			</p>
+
+			<div class="row">
+				<div class="col-md-12">
+					<iframe class="video-center" width="800" height="500" src="https://www.youtube.com/embed/W_uOwoGcBuE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+					<p class="text-center" style="margin-top: 15px;">
+						Ici avec notre propre arrangement de <i>La Foule</i>, célèbre morceau d'<strong>Edith Piaf</strong> ; nous avons choisi de l'interpréter dans une version douce et intimiste, pour un moment relaxant..
+						<br><a href="https://www.youtube.com/watch?v=W_uOwoGcBuE" target="_blank">https://www.youtube.com/watch?v=W_uOwoGcBuE</a>
+					</p>
+				</div>
+			</div>
+
+			<h2 class="section-title section-title--small">Solo</h2>
+
+			<p>
+				Mon répertoire solo s'axe autour du jazz et de la chanson française, autour de standards et d'autres morceaux moins connus ; une formule très adaptable, disponible en acoustique ou sonorisé, possibilité de déambulations, ...
+			</p>
+
+			<p>
+				<a class="btn btn-primary" href="{{ path('animations') }}">Plus d'informations sur la formule en solo</a>
+			</p>
+
             <div class="row">
                 <div class="col-md-6">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/8eY4FsHf7g0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
 
-                <div class="col-md-6">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/VVWMhc7LNcM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
+					<p class="text-center" style="margin-top: 15px;">
+						<i>Carnevale</i> est un morceau récent, écrit par l'accordéoniste jazz <strong>Renzo Ruggieri</strong> ; pièce devenue culte dans le milieu de l'accordéon, elle est notamment très jouée dans les concours internationaux.
+						<br><a href="https://www.youtube.com/watch?v=mv3DgoYPCds" target="_blank">https://www.youtube.com/watch?v=mv3DgoYPCds</a>
+					</p>
+				</div>
+
+				<div class="col-md-6">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/mv3DgoYPCds" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+					<p class="text-center" style="margin-top: 15px;">
+						<i>Ain't Misbehavin</i> est un morceau de 1929, écrit par Fats Waller et Harry Brooks, popularisée notamment par <strong>Louis Armstrong</strong> ; ici jouée à la manière de <strong>Frank Marocco</strong>, célèbre accordéoniste jazz.
+						<br><a href="https://www.youtube.com/watch?v=mv3DgoYPCds" target="_blank">https://www.youtube.com/watch?v=mv3DgoYPCds</a>
+					</p>
+				</div>
             </div>
 
             <div class="row">
+				<div class="col-md-6">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/VVWMhc7LNcM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+					<p class="text-center" style="margin-top: 15px;">
+						<i>Grain de Fantaisie</i> est une très jolie valse, composée par <strong>Jérôme Richard</strong> (primés plusieurs fois dans les concours internationaux) et <strong>Maurice Larcange</strong>.
+						<br><a href="https://www.youtube.com/watch?v=VVWMhc7LNcM" target="_blank">https://www.youtube.com/watch?v=VVWMhc7LNcM</a>
+					</p>
+				</div>
+
                 <div class="col-md-6">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/2ikPP4jTAfE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
 
-                <div class="col-md-6">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/_cyzXvBjHkE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
+					<p class="text-center" style="margin-top: 15px;">
+						Est-il encore nécessaire de présenter <strong>Jo Privat</strong> ? Accordéoniste des années 40, il sera celui qui réunit le musette et le jazz manouche ; je vous propose ici l'une de ses (nombreuses) valses swing, <i>Sa Préférée</i>.
+						<br><a href="https://www.youtube.com/watch?v=2ikPP4jTAfE" target="_blank">https://www.youtube.com/watch?v=2ikPP4jTAfE</a>
+					</p>
+				</div>
             </div>
 
-            <h1 class="section-title">Audio</h1>
+			<h2 class="section-title section-title--small">Duos accordéon / voix</h2>
+
+			<p>
+				Je travaille également avec plusieurs chanteuses, me permettant de proposer des concerts autour de la chanson française en duo accordéon / voix ; chacune possède son propre timbre de voix, et propose un répertoire différent. N'hésitez pas à <a href="{{ path('contact') }}">me contacter</a> pour en savoir plus.
+			</p>
+
+			<div class="row">
+				<div class="col-md-6">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/_cyzXvBjHkE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+			</div>
+
+            <h2 class="section-title" style="margin-top: 20px;">Audio</h1>
+
+			<p>
+				Plus complets, ces enregistrements ont été réalisés en studio ; forcément moins spontanés qu'en <i>live</i>, mais avec des arrangements préparés et pour la plupart des CDs disponibles physiquement.
+			</p>
 
             <div class="row">
                 <div class="col-md-12">
-                    <iframe width="100%" height="600" scrolling="yes" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/400925852&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+                    <iframe width="100%" height="600" scrolling="yes" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/400925852&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=false"></iframe>
                 </div>
             </div>
         </div>
