--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,11 +23,11 @@
         <meta name="theme-color" content="#ffffff">
 
         <title>
-            {% block title %}Accordéoniste professionnel | Paris, Ile de France | Jérémy DUTHEIL{% endblock %}
+            {% block title %}Accordéoniste | Paris, France | Jérémy DUTHEIL{% endblock %}
         </title>
 
         {% block metadesc %}
-            <meta name="description" content="Accordéoniste professionnel à Paris ; disponible seul ou en groupe pour concerts, événements, animations ou soirées privées.">
+            <meta name="description" content="Accordéoniste à Paris, Jérémy Dutheil intervient seul ou en groupe, pour concerts et événements (mariage, anniversaire, soirée, ...) dans toute la France.">
         {% endblock %}
 
         <meta property="og:title" content="Accordéoniste profesionnel, Paris | Jérémy DUTHEIL">
