--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,10 +6,10 @@
 			<img src="img/flash-item-1.jpg" alt="Accordéoniste en concert" title="Accordéoniste professionnel à Paris" class="flash-item__background">
 
 			<div class="flash-item__content mr-auto ml-5 col-sm-5">
-				<h1 class="flash-item__content-title">Accordéoniste <br>pour vos événements</h1>
+				<h2 class="flash-item__content-title">Musicien <br>pour vos événements</h1>
 
 				<p class="flash-item__content-text">
-					Vous cherchez un accordéoniste pour un anniversaire, <br>une soirée d'entreprise ou une animation seniors à Paris ou en Ile de France ?
+					Vous cherchez un accordéoniste pour un mariage, un anniversaire, <br>une soirée d'entreprise ou une animation seniors à Paris, Ile de France ou dans toute la France ?
 				</p>
 
 				<a href="{{ path('animations') }}" class="btn btn-secondary flash-item__content-btn">Découvrir les formules d'animations musicales</a>
@@ -27,10 +27,10 @@
 			<div class="row">
 				<div class="col-sm-8 page-section__content-wrapper">
 					<div>
-						<h2 class="section-title">Artiste polyvalent à Paris</h2>
+						<h1 class="section-title">Accordéoniste à Paris</h2>
 
 						<p>
-							Jérémy Dutheil est <strong>un accordéoniste français</strong> complet abordant un large univers musical, original et résolument moderne. De la <em class="text-link">guinguette</em> au <em class="text-link">rock oriental</em>, en passant par la <em class="text-link">chanson française</em> ou encore le <em class="text-link">jazz</em>, cet artiste passionné aime toucher à tous les styles.
+							Jérémy Dutheil est <strong>un accordéoniste français</strong> complet abordant un large univers musical, original et résolument moderne. De la <em class="text-link">guinguette</em> au <em class="text-link">rock oriental</em>, en passant par la <em class="text-link">chanson française</em> ou encore le <em class="text-link">jazz</em>, cet artiste polyvalent et passionné aime toucher à tous les styles.
 						</p>
 
 						<p>
@@ -134,11 +134,11 @@
 						<h2 class="section-title section-title--blank">Animations musicales</h2>
 
 						<p class="txt--blank">
-							L'accordéon, de par sa richesse et sa diversité musicales, se prête particulièrement bien au jeu de l'<strong>animation musicale</strong> ; fort d'une certaine expérience, j'évolue au sein d'un répertoire varié qui plaira à tout type de public. Ici il ne s'agit pas d'un concert classique, mais de s'adapter en fonction de votre lieu et de vos attentes ; je peux aussi bien me faire discret et jouer des standards de jazz lors d'un <em class="text-link txt--blank" >repas en musique</em>, que jouer du <em class="text-link txt--blank">musette</em> pour faire <em class="text-link txt--blank">danser les seniors</em>.
+							L'accordéon, de par sa richesse et sa diversité musicales, se prête particulièrement bien au jeu de l'<strong>animation musicale</strong> ; fort d'une expérience certaine, je propose un répertoire varié qui plaira à tout type de public. Ici il ne s'agit pas d'un concert classique, mais de s'adapter en fonction de votre lieu et de vos attentes ; je peux aussi bien me faire discret et jouer des standards de jazz lors d'un repas en musique ou au vin d'honneur de votre mariage, mais également jouer du musette pour faire danser les seniors en début de soirée (ou pour un anniversaire, par exemple).
 						</p>
 
 						<p class="txt--blank">
-							À <strong>Paris</strong> ou dans la France entière, différentes formules sont disponibles et de nombreuses options sont discutables en amont de la prestation : acoustique ou sonorisé, styles abordés, ... Suivant vos envies, il m'est également possible d'être accompagné d'autres musiciens (guitare, contrebasse, violon, ...) ou d'<em class="text-link txt--blank">une chanteuse</em>.
+							À <strong>Paris</strong> et dans la France entière, différentes formules sont disponibles et de nombreuses options sont discutables en amont de la prestation : acoustique ou sonorisé, styles abordés, ... Suivant vos envies et votre budget, je peux également venir accompagné d'autres musiciens ; lors d'un mariage ou d'une soirée privée, on appréciera tout particulièrement le <a style="color: #ffffff;" href="{{ path('manouche') }}">groupe de jazz manouche</a>, par exemple. J'accompagne également plusieurs chanteuses, avec lesquelles nous proposons des répertoires autour de la chanson française ; un duo très apprécié pour vos anniversaires, ou dans les maisons de retraite (EHPAD, ...) ! 
  						</p>
 
 						<p>
